styled almost finished, found some extra margin that needs some fixing on the options

--- a/question-app/src/App.css
+++ b/question-app/src/App.css
@@ -9,6 +9,13 @@ body {
   background-size: cover;
 }
 
+hr {
+    border: 0;
+    height: 4px;
+    margin-top: 18px;
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
+}
+
 .title-container {
   font-family: 'Monofett', cursive;
   font-size: 64px;
@@ -57,9 +64,9 @@ body {
 }
 
 .questions-container {
-  border: 1px solid red;
   margin: 5%;
   padding: 10px 40px;
+  text-align: center;
 }
 
 .questions-container > h1 {
@@ -77,6 +84,16 @@ body {
 .button-option-container {
   margin: 0px 20px;
   width: 100%;
+  padding: 10px 4px;
+  border-radius: 12px;
+  font-family: 'Fredoka One', cursive;
+  text-shadow:5px 4px 5px #585656;
+  color: white;
+  box-shadow: 2px 2px 5px 0px #1c1c1c3b;
+}
+
+.button-option-container:hover {
+  cursor: pointer;
 }
 
 .check-answers-button-container {
